// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MenuItem snapshots > should render a disabled MenuItem 1`] = `
<div
  aria-disabled="true"
  class="MenuItem"
  data-disabled=""
  data-orientation="vertical"
  data-radix-collection-item=""
  role="menuitem"
  tabindex="-1"
>
  <span
    style="opacity: 0;"
  >
    <svg
      aria-hidden="true"
      class="Icon"
      fill="none"
      height="14"
      style="color: var(--color-neutral-1);"
      viewBox="0 0 16 16"
      width="14"
    >
      <path
        d="M11.584 3.723a.5.5 0 0 1 .832.554l-5 7.5a.502.502 0 0 1-.77.077l-3-3a.5.5 0 0 1 .708-.708l2.568 2.569z"
        data-svg-property="fill"
        fill="white"
      />
    </svg>
  </span>
  <svg
    class="Icon"
    data-fpl-icon-size="24"
    fill="none"
    height="24"
    style="color: var(--color-neutral-1);"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      clip-rule="evenodd"
      d="M8.5 6a.5.5 0 0 0-.5.5V8H6.5a.5.5 0 0 0 0 1H8v6H6.5a.5.5 0 0 0 0 1H8v1.5a.5.5 0 0 0 1 0V16h6v1.5a.5.5 0 0 0 1 0V16h1.5a.5.5 0 0 0 0-1H16V9h1.5a.5.5 0 0 0 0-1H16V6.5a.5.5 0 0 0-1 0V8H9V6.5a.5.5 0 0 0-.5-.5M15 9H9v6h6z"
      data-svg-property="fill"
      fill="white"
      fill-rule="evenodd"
    />
  </svg>
  <span
    class="MenuItem__label"
  >
    Frame
  </span>
  <span
    class="MenuItem__shortcut"
  >
    F
  </span>
</div>
`;

exports[`MenuItem snapshots > should render a selected MenuItem with an icon and a shortcut 1`] = `
<div
  class="MenuItem"
  data-orientation="vertical"
  data-radix-collection-item=""
  role="menuitem"
  tabindex="-1"
>
  <span
    style="opacity: 1;"
  >
    <svg
      aria-hidden="true"
      class="Icon"
      fill="none"
      height="14"
      style="color: var(--color-neutral-1);"
      viewBox="0 0 16 16"
      width="14"
    >
      <path
        d="M11.584 3.723a.5.5 0 0 1 .832.554l-5 7.5a.502.502 0 0 1-.77.077l-3-3a.5.5 0 0 1 .708-.708l2.568 2.569z"
        data-svg-property="fill"
        fill="white"
      />
    </svg>
  </span>
  <svg
    class="Icon"
    data-fpl-icon-size="24"
    fill="none"
    height="24"
    style="color: var(--color-neutral-1);"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      clip-rule="evenodd"
      d="M8.5 6a.5.5 0 0 0-.5.5V8H6.5a.5.5 0 0 0 0 1H8v6H6.5a.5.5 0 0 0 0 1H8v1.5a.5.5 0 0 0 1 0V16h6v1.5a.5.5 0 0 0 1 0V16h1.5a.5.5 0 0 0 0-1H16V9h1.5a.5.5 0 0 0 0-1H16V6.5a.5.5 0 0 0-1 0V8H9V6.5a.5.5 0 0 0-.5-.5M15 9H9v6h6z"
      data-svg-property="fill"
      fill="white"
      fill-rule="evenodd"
    />
  </svg>
  <span
    class="MenuItem__label"
  >
    Frame
  </span>
  <span
    class="MenuItem__shortcut"
  >
    F
  </span>
</div>
`;
